# transia

./: .gitignore  LICENSE  README.en.md  README.md  build_release.sh  pyproject.toml
.github/workflows/: release.yml
src/transia/: __init__.py  base_processor.py  batch_processor.py  cache.py  epub_handler.py  html_processor.py  main.py  search_service.py  srt_handler.py  standalone_engines.py  standalone_utils.py  translation_service.py
tests/: alice.epub  conftest.py  progress_test.srt  test.srt  test_async_request.py  test_auto_glossary.py  test_batch_processor.py  test_cache.py  test_cli.py  test_cli_updated.py  test_concurrency.py  test_config.py  test_engine_base.py  test_engine_injection.py  test_epub_handler.py  test_epub_metadata.py  test_epub_repackage.py  test_glossary.py  test_google_engine.py  test_html_processor.py  test_integration.py  test_llm_engine.py  test_progress_callback.py  test_prompt_injection.py  test_search_service.py  test_service_api.py  test_srt_handler.py  test_summarization.py  test_utils.py
